--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="spinner-border d-none" id="spinner"></div>
         <p class="response" id="response"></p>
     </div>
-    <script type="text/javascript" src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
